<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

    <LinearLayout

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_a_score"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/scoreCountA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:padding="5dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:onClick="addScoreA"
            android:text="@string/add_score"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foul_count"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/foulCountA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:padding="5dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/add_foul"
            android:onClick="addFoulA"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/throw_in_count"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/throwCountA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:padding="5dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/add_throw_in"
            android:onClick="addThrowA"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="500dp"
            android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center_horizontal"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_b_score"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/scoreCountB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:padding="5dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:onClick="addScoreB"
            android:text="@string/add_score"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foul_count"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/foulCountB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:padding="5dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/add_foul"
            android:onClick="addFoulB"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/throw_in_count"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/throwCountB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:padding="5dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/add_throw_in"
            android:onClick="addThrowB"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:onClick="resetBtn"
        android:text="@string/reset" />


</RelativeLayout>

</ScrollView>